--- a/index.html
+++ b/index.html
@@ -6,11 +6,22 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
   <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css" media="screen" title="no title" charset="utf-8">
   <link rel="stylesheet" href="bower_components/sidebar/simple-sidebar.css" media="screen" title="no title" charset="utf-8">
-  <script src="bower_components/jquery/dist/jquery.js" charset="utf-8"></script>
-  <script src="bower_components/angular/angular.js" charset="utf-8"></script>
-  <script src="bower_components/Chart.js/Chart.js" charset="utf-8"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.js" charset="utf-8"></script>
-  <script src="bower_components/angular-chart.js/angular-chart.js" charset="utf-8"></script>
+  <style media="screen">
+    li span {
+      position: absolute;
+      left: 50px;
+    }
+    h3 {
+      width: 134px;
+      height: 18px;
+
+      font-size: 14px;
+      font-weight: 600;
+      line-height: 1.29;
+      color: #7cb2ed;
+
+    }
+  </style>
 </head>
 <body>
   <nav class="navbar navbar-inverse  navbar-fixed-top">
@@ -56,121 +67,92 @@
         </li>
         <li>
           <a href="#">
-            <svg width="18px" height="11px" viewBox="0 0 18 11" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-              <!-- Generator: sketchtool 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
-              <title>8B28611B-969C-4FDD-A343-ECF07F008629</title>
-              <desc>Created with sketchtool.</desc>
-              <defs></defs>
-              <g id="Welcome" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                <g id="Dashboard" transform="translate(-25.000000, -133.000000)" fill="#5C9DF5">
-                  <g id="side-bar">
-                    <g id="analitycs" transform="translate(25.000000, 133.000000)">
-                      <path d="M1.27826087,8.84105015 C0.57826087,8.84105015 0,8.29559271 0,7.63466717 C0,6.97402888 0.57826087,6.42857143 1.27826087,6.42857143 C1.97826087,6.42857143 2.55652174,6.97402888 2.55652174,7.63466717 C2.55652174,8.29530547 1.97826087,8.84105015 1.27826087,8.84105015 L1.27826087,8.84105015 Z" id="Shape"></path>
-                      <path d="M9.27826087,10.1267644 C8.57826087,10.1267644 8,9.58130699 8,8.92038146 C8,8.25974316 8.57826087,7.71428571 9.27826087,7.71428571 C9.97826087,7.71428571 10.5565217,8.25974316 10.5565217,8.92038146 C10.5565217,9.58101976 9.97826087,10.1267644 9.27826087,10.1267644 L9.27826087,10.1267644 Z" id="Shape-Copy-2"></path>
-                      <path d="M16.6115942,2.41247872 C15.9115942,2.41247872 15.3333333,1.86702128 15.3333333,1.20609574 C15.3333333,0.545457447 15.9115942,0 16.6115942,0 C17.3115942,0 17.8898551,0.545457447 17.8898551,1.20609574 C17.8898551,1.86673404 17.3115942,2.41247872 16.6115942,2.41247872 L16.6115942,2.41247872 Z" id="Shape-Copy-3"></path>
-                      <path d="M4.56811594,5.36717325 C3.86811594,5.36717325 3.28985507,4.82142857 3.28985507,4.16079027 C3.28985507,3.50015198 3.86811594,2.95440729 4.56811594,2.95440729 C5.26811594,2.95440729 5.84637681,3.50015198 5.84637681,4.16079027 C5.84637681,4.82142857 5.26811594,5.36717325 4.56811594,5.36717325 L4.56811594,5.36717325 Z M4.56811594,3.47142857 C4.17246377,3.47142857 3.86811594,3.75866261 3.86811594,4.13206687 C3.86811594,4.50547112 4.17246377,4.79270517 4.56811594,4.79270517 C4.96376812,4.79270517 5.26811594,4.50547112 5.26811594,4.13206687 C5.26811594,3.75866261 4.96376812,3.47142857 4.56811594,3.47142857 L4.56811594,3.47142857 Z" id="Shape"></path>
-                      <path d="M13.2782609,6.26990881 C12.5782609,6.26990881 12,5.72416413 12,5.06352584 C12,4.40288754 12.5782609,3.85714286 13.2782609,3.85714286 C13.9782609,3.85714286 14.5565217,4.40288754 14.5565217,5.06352584 C14.5565217,5.72416413 14.0086957,6.26990881 13.2782609,6.26990881 L13.2782609,6.26990881 Z M13.2782609,4.40288754 C12.8826087,4.40288754 12.5782609,4.69012158 12.5782609,5.06352584 C12.5782609,5.43693009 12.8826087,5.72416413 13.2782609,5.72416413 C13.673913,5.72416413 13.9782609,5.43693009 13.9782609,5.06352584 C13.9782609,4.69012158 13.673913,4.40288754 13.2782609,4.40288754 L13.2782609,4.40288754 Z" id="Shape"></path>
-                      <path d="M1.88863254,7.20900935 C1.73645863,7.12283914 1.70602385,6.95049872 1.7973282,6.8356051 L3.80724638,4.85015198 C3.89855072,4.70653495 4.08115942,4.67781155 4.20289855,4.76398176 C4.35507246,4.85015198 4.38550725,5.0224924 4.2942029,5.13738602 L2.3147195,7.09411574 C2.25384994,7.18028595 2.16254559,7.23773276 2.04080646,7.23773276 C2.04080646,7.23773276 1.94950211,7.23773276 1.88863254,7.20900935 Z" id="Shape"></path>
-                      <path d="M8.47696934,8.50276192 L5.11594203,4.993769 C4.9942029,4.90759878 4.96376812,4.73525836 5.05507246,4.62036474 C5.14637681,4.50547112 5.32898551,4.47674772 5.45072464,4.56291793 L8.8120563,8.07191085 C8.93349108,8.15808107 8.96423021,8.33042149 8.87292586,8.44531511 C8.84249108,8.50276192 8.75118673,8.56020873 8.65988238,8.56020873 C8.59901282,8.56020873 8.53814325,8.53148532 8.47696934,8.50276192 Z" id="Shape"></path>
-                      <path d="M9.95164856,8.6626362 C9.79947464,8.6051894 9.70817029,8.46157237 9.76903986,8.31795535 L12.2968716,5.79439408 C12.3580455,5.6510643 12.5406542,5.59361749 12.6928281,5.62234089 C12.845002,5.6797877 12.9363064,5.82340472 12.8754368,5.96702174 L10.3479094,8.49058301 C10.2867355,8.60547663 10.1649964,8.69164684 10.0432573,8.69164684 C10.0125181,8.69164684 9.98238769,8.69164684 9.95164856,8.6626362 Z" id="Shape"></path>
-                      <path d="M13.9006741,4.54845302 C13.7485002,4.49100621 13.6571958,4.34738919 13.7180654,4.20377216 L15.79497,1.72620221 C15.8561439,1.58287242 16.0387526,1.52542561 16.1909265,1.55414902 C16.3431004,1.61159583 16.4344048,1.75521285 16.3735352,1.89882987 L14.296935,4.37639982 C14.235761,4.49129344 14.1140219,4.57746365 13.9922828,4.57746365 C13.9615437,4.57746365 13.9314132,4.57746365 13.9006741,4.54845302 Z" id="Shape-Copy"></path>
-                    </g>
-                  </g>
-                </g>
-              </g>
-            </svg>
-
-            Analytics</a>
+            <img src="assets/analytics.svg" alt="Analytics" />
+            <span>Analytics</span></a>
           </li>
           <li>
             <a href="#">
-              <svg width="16px" height="11px" viewBox="0 0 16 11" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <!-- Generator: sketchtool 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
-                <title>DBF91B5A-4D20-4CE4-8A96-5B5461B90002</title>
-                <desc>Created with sketchtool.</desc>
-                <defs></defs>
-                <g id="Welcome" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                  <g id="Dashboard" transform="translate(-24.000000, -176.000000)" fill="#5C9DF5">
-                    <g id="side-bar">
-                      <g id="newspaper-o" transform="translate(24.000000, 176.000000)">
-                        <path d="M8,3 L5,3 L5,6 L8,6 L8,3 L8,3 Z M9,8 L9,9 L4,9 L4,8 L9,8 L9,8 Z M9,2 L9,7 L4,7 L4,2 L9,2 L9,2 Z M14,8 L14,9 L10,9 L10,8 L14,8 L14,8 Z M14,6 L14,7 L10,7 L10,6 L14,6 L14,6 Z M14,4 L14,5 L10,5 L10,4 L14,4 L14,4 Z M14,2 L14,3 L10,3 L10,2 L14,2 L14,2 Z M2,9.5 L2,2 L1,2 L1,9.5 C1,9.63541667 1.04947917,9.75260417 1.1484375,9.8515625 C1.24739583,9.95052083 1.36458333,10 1.5,10 C1.63541667,10 1.75260417,9.95052083 1.8515625,9.8515625 C1.95052083,9.75260417 2,9.63541667 2,9.5 L2,9.5 Z M15,9.5 L15,1 L3,1 L3,9.5 C3,9.671875 2.97135417,9.83854167 2.9140625,10 L14.5,10 C14.6354167,10 14.7526042,9.95052083 14.8515625,9.8515625 C14.9505208,9.75260417 15,9.63541667 15,9.5 L15,9.5 Z M16,0 L16,9.5 C16,9.91666667 15.8541667,10.2708333 15.5625,10.5625 C15.2708333,10.8541667 14.9166667,11 14.5,11 L1.5,11 C1.08333333,11 0.729166667,10.8541667 0.4375,10.5625 C0.145833333,10.2708333 0,9.91666667 0,9.5 L0,1 L2,1 L2,0 L16,0 L16,0 Z" id="Shape"></path>
-                      </g>
-                    </g>
-                  </g>
-                </g>
-              </svg>
-              News</a>
-            </li>
-            <li>
-              <a href="#">
-                <svg width="12px" height="15px" viewBox="0 0 12 15" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <!-- Generator: sketchtool 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
-                  <title>F94237B0-A94D-4AE9-9491-CD4270D9D8DB</title>
-                  <desc>Created with sketchtool.</desc>
-                  <defs></defs>
-                  <g id="Welcome" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                    <g id="Dashboard" transform="translate(-26.000000, -218.000000)" fill="#5C9DF5">
-                      <g id="side-bar">
-                        <g id="board-brief" transform="translate(26.000000, 218.000000)">
-                          <path d="M3.20014421,0.156249999 L0.126315789,0.15625 L0.126315789,3.40625 L0.126315789,14.84375 L11.8736842,14.84375 L11.8736842,0.15625 L4.76554295,0.15625 L3.41052632,0.15625 L3.20014421,0.156249999 Z M0.757894737,14.21875 L0.757894737,3.84375 L0.757894737,0.78125 L3.85263158,0.78125 L11.2421053,0.78125 L11.2421053,14.21875 L0.757894737,14.21875 Z" id="Shape"></path>
-                          <path d="M10.0105263,5.0625 L10.0105263,1.375 L6.91578947,1.375 L6.91578947,5.0625 L10.0105263,5.0625 L10.0105263,5.0625 Z M7.54736842,2 L9.37894737,2 L9.37894737,4.4375 L7.54736842,4.4375 L7.54736842,2 L7.54736842,2 Z M1.98947368,6.75 L10.0105263,6.75 L10.0105263,7.375 L1.98947368,7.375 L1.98947368,6.75 Z M1.89473684,8.4375 L9.91578947,8.4375 L9.91578947,9.0625 L1.89473684,9.0625 L1.89473684,8.4375 Z M1.89473684,10.125 L9.91578947,10.125 L9.91578947,10.75 L1.89473684,10.75 L1.89473684,10.125 Z M1.89473684,11.8125 L6.91578947,11.8125 L6.91578947,12.4375 L1.89473684,12.4375 L1.89473684,11.8125 Z M1.89473684,1.25 L5.90526316,1.25 L5.90526316,1.875 L1.89473684,1.875 L1.89473684,1.25 Z M1.89473684,2.5 L5.90526316,2.5 L5.90526316,3.125 L1.89473684,3.125 L1.89473684,2.5 Z" id="Combined-Shape"></path>
-                        </g>
-                      </g>
-                    </g>
-                  </g>
-                </svg>
+              <img src="assets/newspaper-o.svg" alt="News" />
+              <span>News</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="assets/board-brief.svg" alt="Board brief" />
+              <span>Board brief</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="assets/briefcase.svg" alt="Briefcase" />
+              <span>Briefcase</span>
+            </a>
+          </li>
+          <li>
+            <br><br><br><br><br>
+            <a href="#menu-toggle"  id="menu-toggle">
+              <img src="assets/angle-double-left.svg" alt="Close the menu">
+              <span>Close Menu</span></a>
+          </li>
+        </ul>
 
-                Board brief</a>
-              </li>
-              <li>
-                <a href="#">
-                  <svg width="18px" height="14px" viewBox="0 0 18 14" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <!-- Generator: sketchtool 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
-                    <title>F61DA7B0-9AF6-4D7A-A2D9-108536299E04</title>
-                    <desc>Created with sketchtool.</desc>
-                    <defs></defs>
-                    <g id="Welcome" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                      <g id="Dashboard" transform="translate(-23.000000, -267.000000)" fill="#5C9DF5">
-                        <g id="side-bar">
-                          <g id="briefcase" transform="translate(23.000000, 267.000000)">
-                            <path d="M17.9649123,2.88843564 C17.9649123,2.43090594 17.5882807,2.05838119 17.1249825,2.05838119 L12.4243509,2.05838119 L12.4243509,0.833034653 C12.4243509,0.37550495 12.0477193,0.00298019802 11.5844211,0.00298019802 L6.38021053,0.00298019802 C5.91722807,0.00298019802 5.5405614,0.37550495 5.5405614,0.833034653 L5.5405614,2.05834653 L0.839649123,2.05834653 C0.376666667,2.05834653 0,2.43087129 0,2.88840099 L0,13.1680396 C0,13.6250495 0.376631579,13.9970198 0.839649123,13.9970198 L17.1250175,13.9970198 C17.5882807,13.9970198 17.9649474,13.6250495 17.9649474,13.1680396 L17.9649474,2.88843564 L17.9649123,2.88843564 Z M6.17926316,0.634851485 L11.785614,0.634851485 L11.785614,2.05834653 L6.17926316,2.05834653 L6.17926316,0.634851485 L6.17926316,0.634851485 Z M3.12224561,13.3662228 L0.638701754,13.3662228 L0.638701754,2.69025248 L3.12224561,2.69025248 L3.12224561,13.3662228 L3.12224561,13.3662228 Z M14.2034035,13.3662228 L3.76098246,13.3662228 L3.76098246,2.69025248 L14.2034035,2.69025248 L14.2034035,13.3662228 L14.2034035,13.3662228 Z M17.3262105,13.3662228 L14.8426667,13.3662228 L14.8426667,2.69025248 L17.3262105,2.69025248 L17.3262105,13.3662228 L17.3262105,13.3662228 Z" id="Shape"></path>
-                          </g>
-                        </g>
-                      </g>
-                    </g>
-                  </svg>
-                  Briefcase</a>
-                </li>
-                <li>
-                  <a href="#menu-toggle"  id="menu-toggle">Close Menu</a>
-                </li>
-              </ul>
-            </div>
-            <div id="page-content-wrapper" style="padding-top:70px">
-              <div class="container-fluid">
-                <div class="row">
-                  <div class="col-lg-12">
-                    <div class="well">
-                      <h3>Speed zones</h3>
-                      <canvas id="line" class="chart chart-line" chart-data="data" chart-labels="moments"
-                      chart-series="labels" chart-options="options" chart-dataset-override="datasetOverride" chart-click="onClick">
+      </div>
+      <div id="page-content-wrapper" style="padding-top:70px">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="well">
+                <h3>Speed zones</h3>
+                <a href="#" data-toggle="tooltip" title="Expand / reduce this component">
+                    <span class="glyphicon glyphicon-fullscreen"></span>
+                </a>
+                <a href="#" data-toggle="tooltip" title="This is an info button that shows you... some info about the current widget">
+                  <span class="glyphicon glyphicon-info-sign"></span>
+                </a>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6">
+                          <canvas id="line" class="chart chart-line" chart-data="data" chart-labels="moments"
+                          chart-series="labels" chart-options="options" chart-dataset-override="datasetOverride" chart-click="onClick">
+                        </div>
+                        <div class="col-lg-6">
+                          <div ng-repeat="l in labels">
+                              <label>
+                              <input type="checkbox" name="name" ng-checked="zonesVisibility[l]" >
+                              {{l}}</label>
+                          </div>
+                        </div>
                     </div>
-                  </canvas>
-                  <div class="well">
-                    <h3>Count by zones</h3>
-                    <canvas id="bar" class="chart chart-bar"
-                    chart-data="counts" chart-labels="labels" chart-series="labels" chart-options="options">
-                  </canvas>
-                </div>
-                <div class="well">
-                  <h3>Speed average</h3>
-                  <canvas id="doughnut" class="chart chart-doughnut" chart-data="speeds" chart-labels="labels" chart-options="options">
-                  </canvas>
                 </div>
               </div>
-            </div>
+            </canvas>
           </div>
         </div>
-        <script src="app.js" charset="utf-8"></script>
-      </body>
-      </html>
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="well">
+              <h3>Count by zones</h3>
+              <canvas id="bar" class="chart chart-bar"
+              chart-data="counts" chart-labels="labels" chart-series="labels" chart-options="options">
+            </canvas>
+          </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="well">
+              <h3>Speed average</h3>
+              <canvas id="doughnut" class="chart chart-doughnut" chart-data="speeds" chart-labels="labels" chart-options="options">
+              </canvas>
+            </div>
+
+          </div>
+        </div>
+    </div>
+  </div>
+  <script src="bower_components/jquery/dist/jquery.js" charset="utf-8"></script>
+  <script src="bower_components/angular/angular.js" charset="utf-8"></script>
+  <script src="bower_components/Chart.js/Chart.js" charset="utf-8"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.js" charset="utf-8"></script>
+  <script src="bower_components/angular-chart.js/angular-chart.js" charset="utf-8"></script>
+  <script src="app.js" charset="utf-8"></script>
+</body>
+</html>
