The speeds averages are updated every 5 seconds.

--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                           <canvas id="line" class="chart chart-line" chart-data="speedSeries" chart-labels="moments"
-                          chart-series="zones" chart-options="options" chart-click="onClick"
-                          chart-colours="colorsArray">
+                          chart-series="zones" chart-options="options" chart-colours="colorsArray">
                         </div>
                         <div class="col-lg-6">
                           <div ng-repeat="l in zones" ng-style="colorAsObject(l)">
