--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
   <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css" media="screen" title="no title" charset="utf-8">
   <link rel="stylesheet" href="bower_components/sidebar/simple-sidebar.css" media="screen" title="no title" charset="utf-8">
   <style media="screen">
-    li span {
-      position: absolute;
-      left: 50px;
-    }
-    h3 {
+  li span {
+    position: absolute;
+    left: 50px;
+  }
+  h3 {
 
-      font-size: 14px;
-      font-weight: 600;
-      line-height: 1.29;
-      color: #7cb2ed;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.29;
+    color: #7cb2ed;
 
-    }
+  }
+  .well span.hover {display:none}
+  .well:hover span.hover {display:block}
   </style>
 </head>
 <body>
@@ -69,65 +71,80 @@
             <a href="#menu-toggle"  id="menu-toggle">
               <img src="assets/angle-double-left.svg" alt="Close the menu">
               <span>Close Menu</span></a>
-          </li>
-        </ul>
+            </li>
+          </ul>
 
-      </div>
-      <div id="page-content-wrapper" style="padding-top:70px">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="well">
+        </div>
+        <div id="page-content-wrapper" style="padding-top:70px">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="well">
+                  <div class="header">
+                    <span>Speed zones</span>
+                    <span style="float:right" class="hover">
 
-                <div class="header">
-                  <h3>Speed zones</h3>
-                  <a href="#" data-toggle="tooltip" title="Expand this component" ng-click="expand('Speed zones')" ng-hide="expanded">
-                      <span class="glyphicon glyphicon-fullscreen"></span>
-                  </a>
-                  <a href="#" data-toggle="tooltip" title="Expand this component" ng-click="expand(null)" ng-show="expanded">
-                      <span class="glyphicon glyphicon-resize-small"></span>
-                  </a>
-                  <a href="#" data-toggle="tooltip" title="This is an info button that shows you... some info about the current widget">
-                    <span class="glyphicon glyphicon-info-sign"></span>
-                  </a>
-                </div>
-                <div class="container">
+                      <a href="#" data-toggle="tooltip" title="Expand this component" ng-click="expand('Speed zones')" ng-hide="expanded">
+                        <span class="glyphicon glyphicon-fullscreen"></span>
+                      </a>
+                      <a href="#" data-toggle="tooltip" title="Expand this component" ng-click="expand(null)" ng-show="expanded">
+                        <span class="glyphicon glyphicon-resize-small"></span>
+                      </a>
+                      <a href="#" data-toggle="tooltip" title="This is an info button that shows you... some info about the current widget">
+                        <span class="glyphicon glyphicon-info-sign"></span>
+                      </a>
+                    </span>
+                  </div>
+                  <div class="container">
                     <div class="row">
-                        <div class="col-lg-6">
-                          <canvas id="line" class="chart chart-line" chart-data="speedSeries" chart-labels="moments"
-                          chart-series="zones" chart-options="options" chart-colours="colorsArray">
-                        </div>
-                        <div class="col-lg-6">
-                          <div ng-repeat="l in zones" ng-style="colorAsObject(l)">
-                              <label >
-                              <input type="checkbox" name="name" ng-checked="zonesVisibility[l]" ng-click="toggleVisibility(l)" >
-                              {{l}}</label>
+                      <div class="col-lg-6">
+                        <canvas id="line" class="chart chart-line" chart-data="speedSeries" chart-labels="moments"
+                        chart-series="zones" chart-options="options" chart-colours="colorsArray">
+                      </div>
+                      <div >
+                        <div ng-repeat="l in zones" ng-style="colorAsObject(l)">
+                          <label>
+                            <input type="checkbox" name="name" ng-checked="zonesVisibility[l]" ng-click="toggleVisibility(l)" >
+                            {{l}}</label>
                           </div>
                         </div>
+                      </div>
                     </div>
-                </div>
+                  </div>
+                </canvas>
               </div>
-            </canvas>
+            </div>
+            <div class="row" ng-hide="expanded">
+              <div class="col-lg-8" >
+                <div class="well">
+                 <div class="header">
+                  <h3>Count by zones</h3>
+                  </div>
+                <div class="container" >
+                  <div class="row">
+                    <div class="col-lg-6">
+                      <canvas id="bar" class="chart chart-bar"
+                      chart-data="counts" chart-labels="zones" chart-series="zones" chart-options="options">
+                      </canvas>
+                    </div>
+                    <div class="col-lg-2" style="border-left:solid 0.5px blue">
+                      <ol>
+                        <li ng-repeat="z in zones">{{z}}</li>
+                      </ol>
+                    </div>
+                  </div>
+                </div>
+            </div>
           </div>
-        </div>
-        <div class="row" ng-hide="expanded">
-          <div class="col-lg-6" >
-            <div class="well">
-              <h3>Count by zones</h3>
-              <canvas id="bar" class="chart chart-bar"
-              chart-data="counts" chart-labels="zones" chart-series="zones" chart-options="options">
-            </canvas>
-          </div>
-          </div>
-          <div class="col-lg-6" >
+          <div class="col-lg-4" >
             <div class="well">
               <h3>Speed average</h3>
               <canvas id="doughnut" class="chart chart-doughnut" chart-data="speeds" chart-labels="zones" chart-options="options">
               </canvas>
             </div>
-
           </div>
         </div>
+      </div>
     </div>
   </div>
   <script src="bower_components/jquery/dist/jquery.js" charset="utf-8"></script>
