Gulp tasks automation.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Thank you for seeing this demo !</title>
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
-  <link rel="stylesheet" href="bower_components/angular/angular-csp.css" media="screen" title="no title" charset="utf-8">
-  <!-- <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css" media="screen" title="no title" charset="utf-8"> -->
-  <link rel="stylesheet" href="bower_components/sidebar/simple-sidebar.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="dist/all.min.css" media="screen" title="no title" charset="utf-8">
   <style media="screen">
   li span {
     position: absolute;
@@ -155,11 +152,7 @@
       </div>
     </div>
   </div>
-  <script src="bower_components/jquery/dist/jquery.js" charset="utf-8"></script>
-  <script src="bower_components/angular/angular.js" charset="utf-8"></script>
-  <script src="bower_components/Chart.js/dist/Chart.js" charset="utf-8"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.js" charset="utf-8"></script>
-  <script src="bower_components/angular-chart.js/angular-chart.js" charset="utf-8"></script>
+  <script src="dist/all.min.js" charset="utf-8"></script>
   <script src="app.js" charset="utf-8"></script>
 </body>
 </html>
