--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="dataApp" ng-controller="dataCtrl">
 <head>
   <meta charset="UTF-8">
-  <title>Thank you for seeing this demo !</title>
+  <title>Thank you for seeing this demo!!!</title>
   <link rel="stylesheet" href="dist/all.min.css" media="screen" title="no title" charset="utf-8">
   <style media="screen">
   li span {
