--- a/index.html
+++ b/index.html
@@ -36,6 +36,47 @@
     </div>
   </nav>
   <div id="wrapper">
+    <div id="sidebar-wrapper">
+      <ul class="sidebar-nav">
+        <li class="sidebar-brand">
+        </li>
+        <li class="sidebar-brand">
+          <a href="#">
+            NAVIGATE
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="assets/analytics.svg" alt="Analytics" />
+            <span>Analytics</span></a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="assets/newspaper-o.svg" alt="News" />
+              <span>News</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="assets/board-brief.svg" alt="Board brief" />
+              <span>Board brief</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="assets/briefcase.svg" alt="Briefcase" />
+              <span>Briefcase</span>
+            </a>
+          </li>
+          <li>
+            <br><br><br><br><br>
+            <a href="#menu-toggle"  id="menu-toggle">
+              <img src="assets/angle-double-left.svg" alt="Close the menu">
+              <span>Close Menu</span></a>
+            </li>
+          </ul>
+
+        </div>
         <div id="page-content-wrapper" style="padding-top:70px">
           <div class="container-fluid">
             <div class="row">
